# coatswga

./: .gitignore  README.md  bg_positions.py  environment.yml  filter.py  find.py  main.py  my_params.json  new_params.json  params.json  pyproject.toml  seekdeep_params.json  sets.py  step2.py  test_params.json
multiply_align/: algorithms.py  parameters.json
src/: main.py  sets.py
src/multiply_align/: algorithms.py
