[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coatswga"
version = "0.0.2"
description = "Pipeline to find selective primer sets that preferentially bind to the target genome for use in selective whole genome amplification"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
authors = [
    {name = "Kaleb Zuckerman", email = "kalebzuckerman@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3"
]

[project.scripts]
coatswga = "src.main:main"

[tool.setuptools]
packages = ["src", "src.multiply_align"]
include-package-data = true

[tool.setuptools.package-data]
'src' = ['*.json']
'src.multiply_align' = ['*.json']
